--- a/templates/addons/dropzone.hbs
+++ b/templates/addons/dropzone.hbs
@@ -4,18 +4,25 @@
 	<div class="ui cards">
 	{{#each files as |file|}}
 		<div class="card">
+			{{#if file.thumbnailBase64}}
+				<div class="image">
+					<img src={{file.thumbnailBase64}}>
+				</div>
+			{{/if}}
 			<div class="content">
 				<div class="header">{{file.name}}</div>
 				<div class="meta">{{fileSize file.size}}</div>
-				<div class="description"></div>
+				
 				<ui-progress value={{file.progress}} error={{file.errorMessage}}>
 					<div class="bar">
 						<div class="progress"></div>
 					</div>
-					{{#if file.errorMessage}}
-						<div class="label">{{file.errorMessage}}</div>
-					{{/if}}
 				</ui-progress>
+				{{#if file.errorMessage}}
+					<div class="ui error message">
+						{{file.errorMessage}}						
+					</div>
+				{{/if}}
 			</div>
 			{{#if file.complete}}
 			<div class="ui bottom attached button" {{action "deleteFile" file}}>
