--- a/templates/modules/dropdown.hbs
+++ b/templates/modules/dropdown.hbs
@@ -1,2 +1,9 @@
 <input type="hidden">
 {{yield}}
+{{#if records}}
+	<div class="menu">
+		{{#each records as |record|}}
+		<div class="item" data-value={{get record valueAttribute}}>{{get record textAttribute}}</div>
+		{{/each}}
+	</div>
+{{/if}}
