--- a/templates/modules/dropdown.hbs
+++ b/templates/modules/dropdown.hbs
@@ -1,8 +1,8 @@
 <input type="hidden">
 {{yield}}
-{{#if $records}}
+{{#if dropdownRecords}}
 	<div class="menu">
-		{{#each $records as |record|}}
+		{{#each dropdownRecords as |record|}}
 		<div class="item" data-value={{get record valueAttribute}}>{{get record textAttribute}}</div>
 		{{/each}}
 	</div>
