--- a/templates/addons/calendar.hbs
+++ b/templates/addons/calendar.hbs
@@ -2,5 +2,5 @@
 	{{#if icon}}
 		<i class={{icon}}></i>	
 	{{/if}}
-	<input type="text" placeholder={{placeholder}} data-validation={{dataValidation}}>
+	<input type="text" placeholder={{placeholder}} readonly="readonly" data-validation={{dataValidation}}>
 </div>
